--- a/src/app/blockchain-evote/admin/create-election-admin/create-election-admin.component.html
+++ b/src/app/blockchain-evote/admin/create-election-admin/create-election-admin.component.html
@@ -38,38 +38,77 @@
                 <div class="flex m-3">
                     <p-panel header="ระยะเวลาและสถานะ">
                         <div class="card">
-                            <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
-                                <div class="flex align-items-center justify-content-start border-round" style="min-width: 200px;">
-                                    <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block text-xl"><b>ระยะเวลา : </b></label>
+                            <div class="flex flex-row flex-wrap card-container blue-container">
+                                <div class="m-2">
+                                    <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
+                                        <div class="flex align-items-center justify-content-start border-round"
+                                            style="min-width: 200px;">
+                                            <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
+                                            <label for="Number" class="block text-xl"><b>ระยะเวลาลงคะแนน : </b></label>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300"
+                                        style="max-width: 100%">
+                                        <div class="flex-row align-items-center justify-content-center border-round"
+                                            style="min-width: 100%; min-height: 20px">
+                                            <div class="flex">
+                                                <label for="Number" class="block"><b>เริ่มต้น : </b></label>
+                                            </div>
+                                            <div style="width: 100%">
+                                                <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}"
+                                                    appendTo="body" [(ngModel)]="startDate"></p-calendar>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300 "
+                                        style="max-width: 100% ">
+                                        <div class="flex-row align-items-center justify-content-center border-round "
+                                            style="min-width: 100%; min-height: 50px ">
+                                            <div class="flex">
+                                                <label for="Number " class="block"><b>สิ้นสุด : </b></label>
+                                            </div>
+                                            <div style="width: 100%">
+                                                <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}"
+                                                    appendTo="body" [(ngModel)]="endDate"></p-calendar>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300" style="max-width: 100%">
-                                <div class="flex-row align-items-center justify-content-center border-round" style="min-width: 100%; min-height: 20px">
-                                    <div class="flex">
-                                        <label for="Number" class="block"><b>เริ่มต้น : </b></label>
+                                <div class="m-2">
+                                    <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
+                                        <div class="flex align-items-center justify-content-start border-round"
+                                            style="min-width: 200px;">
+                                            <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
+                                            <label for="Number" class="block text-xl"><b>ระยะเวลาลงสมัคร : </b></label>
+                                        </div>
                                     </div>
-                                    <div style="width: 100%">
-                                        <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}" appendTo="body" [(ngModel)]="startDate"></p-calendar>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300"
+                                        style="max-width: 100%">
+                                        <div class="flex-row align-items-center justify-content-center border-round"
+                                            style="min-width: 100%; min-height: 20px">
+                                            <div class="flex">
+                                                <label for="Number" class="block"><b>เริ่มต้น : </b></label>
+                                            </div>
+                                            <div style="width: 100%">
+                                                <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}"
+                                                    appendTo="body"
+                                                    [(ngModel)]="regisStartdate"></p-calendar>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300 " style="max-width: 100% ">
-                                <div class="flex-row align-items-center justify-content-center border-round " style="min-width: 100%; min-height: 50px ">
-                                    <div class="flex">
-                                        <label for="Number " class="block"><b>สิ้นสุด : </b></label>
-                                    </div>
-                                    <div style="width: 100%">
-                                        <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}" appendTo="body" [(ngModel)]="endDate"></p-calendar>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap card-container blue-container justify-content-center" style="max-width: 100% " [formGroup]="createForm">
-                                <div class="flex align-items-center justify-content-start border-round mt-2 " style="min-width: 200px; min-height: 75px ">
-                                    <i class="pi pi-check-circle " style="font-size: 1rem;margin-right: 5px; "></i>
-                                    <label for="Number " class="block text-xl "><b>เปิดให้ลงทะเบียน : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
-                                        <p-inputSwitch formControlName="elecRegister"></p-inputSwitch>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300 "
+                                        style="max-width: 100% ">
+                                        <div class="flex-row align-items-center justify-content-center border-round "
+                                            style="min-width: 100%; min-height: 50px ">
+                                            <div class="flex">
+                                                <label for="Number " class="block"><b>สิ้นสุด : </b></label>
+                                            </div>
+                                            <div style="width: 100%">
+                                                <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}"
+                                                    appendTo="body"
+                                                    [(ngModel)]="regisEnddate"></p-calendar>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
