--- a/src/app/blockchain-evote/admin/manage-election/edit-election/edit-election.component.scss
+++ b/src/app/blockchain-evote/admin/manage-election/edit-election/edit-election.component.scss
@@ -21,3 +21,15 @@
     border-radius: 5px;
     border-color: #FFA412;
 }
+
+.buttonCheckColor {
+    background: #05A4A9;
+    border-radius: 5px;
+    border-color: #05A4A9;
+}
+
+.buttonCheckColor:hover {
+    background: #039396;
+    border-radius: 5px;
+    border-color: #039396;
+}
