--- a/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
@@ -12,7 +12,8 @@
                             </ng-template>
                             <div class="flex m-2">
                                 <div class="card" style="min-width: 900px;">
-                                    <p-table #inputEL [value]="student" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['projCode','projName','customerCode']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
+                                    <p-table #inputEL [value]="electionOnVoteList" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['elecId','elecName','elecStartdate','elecEnddate']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+                                        currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
                                         <ng-template pTemplate="caption">
                                             <div class="flex align-items-center justify-content-between">
                                                 รายการที่เปิดให้ลงคะแนน
@@ -26,30 +27,40 @@
                                             <tr>
                                                 <th>รหัสรายการ</th>
                                                 <th>ชื่อรายการ</th>
-                                                <th>คณะ</th>
+                                                <th>เริ่มต้นลงคะแนน</th>
+                                                <th>สิ้นลงคะแนน</th>
+                                                <th>จำนวนผู้ลงสมัคร</th>
                                                 <th style="width: 25vh;text-align: center;">
                                                 </th>
                                             </tr>
                                         </ng-template>
-                                        <ng-template pTemplate="body" let-students>
+                                        <ng-template pTemplate="body" let-electionDetail>
                                             <tr>
-                                                <td>
-                                                    {{students.studentId}}
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecId}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecName}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecStartdate | formatDate}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecEnddate | formatDate}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    <div class="flex justify-content-center">
+                                                        {{electionDetail.countCandi}}
+                                                    </div>
                                                 </td>
                                                 <td>
-                                                    {{students.name}}
-                                                </td>
-                                                <td>
-                                                    {{students.faculty}}
-                                                </td>
-                                                <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="จัดการผู้มีสิทธิ์" style="width: 100%;" (click)="addRemoveVoter()"></button>
+                                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" style="width: 100%;" (click)="goToElectionDetail(electionDetail.elecId)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="summary">
                                             <div class="flex align-items-center justify-content-between">
-                                                จำนวนรายการทั้งหมด รายการ
+                                                จำนวนรายการทั้งหมด {{electionOnVoteList ? electionOnVoteList.length : 0 }} รายการ
                                             </div>
                                         </ng-template>
                                     </p-table>
@@ -63,13 +74,13 @@
                             </ng-template>
                             <div class="flex m-2">
                                 <div class="card" style="min-width: 900px;">
-                                    <p-table #inputEL [value]="student" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['projCode','projName','customerCode']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
+                                    <p-table #inputEL2 [value]="allElection" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['elecId','elecName']" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
                                         <ng-template pTemplate="caption">
                                             <div class="flex align-items-center justify-content-between">
                                                 รายการที่กำลังจะมาถึง
                                                 <span class="p-input-icon-left">
                                             <i class="pi pi-search"></i>
-                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL, $event)"/>
+                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL2, $event)"/>
                                         </span>
                                             </div>
                                         </ng-template>
@@ -77,30 +88,48 @@
                                             <tr>
                                                 <th>รหัสรายการ</th>
                                                 <th>ชื่อรายการ</th>
-                                                <th>คณะ</th>
-                                                <th style="width: 25vh;text-align: center;">
-                                                </th>
+                                                <th>เริ่มต้นลงคะแนน</th>
+                                                <th>สิ้นลงคะแนน</th>
+                                                <th>เริ่มต้นลงสมัคร</th>
+                                                <th>สิ้นสุดลงสมัคร</th>
+                                                <th>จำนวนผู้ลงสมัคร</th>
+                                                <th></th>
                                             </tr>
                                         </ng-template>
-                                        <ng-template pTemplate="body" let-students>
+                                        <ng-template pTemplate="body" let-electionDetail>
                                             <tr>
-                                                <td>
-                                                    {{students.studentId}}
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecId}}
                                                 </td>
-                                                <td>
-                                                    {{students.name}}
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecName}}
                                                 </td>
-                                                <td>
-                                                    {{students.faculty}}
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecStartdate | formatDate}}
                                                 </td>
-                                                <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="จัดการผู้มีสิทธิ์" style="width: 100%;" (click)="addRemoveVoter()"></button>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecEnddate | formatDate}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecRegisStartdate | formatDate}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    {{electionDetail.elecRegisEnddate | formatDate}}
+                                                </td>
+                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                    <div class="flex justify-content-center">
+                                                        {{electionDetail.countCandi}}
+                                                    </div>
+                                                </td>
+                                                <td class="flex justify-content-center">
+                                                    <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded p-button-warning mr-2" (click)="editElection(electionDetail.elecId)"></button>
+                                                    <button pButton pRipple type="button" icon="pi pi-trash" class="p-button-rounded p-button-danger"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="summary">
                                             <div class="flex align-items-center justify-content-between">
-                                                จำนวนรายการทั้งหมด รายการ
+                                                จำนวนรายการทั้งหมด {{allElection ? allElection.length: 0}} รายการ
                                             </div>
                                         </ng-template>
                                     </p-table>
@@ -114,13 +143,13 @@
                             </ng-template>
                             <div class="flex m-2">
                                 <div class="card" style="min-width: 900px;">
-                                    <p-table #inputEL [value]="student" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['projCode','projName','customerCode']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
+                                    <p-table #inputEL3 [value]="electionVoteCompleteList" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['projCode','projName','customerCode']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
                                         <ng-template pTemplate="caption">
                                             <div class="flex align-items-center justify-content-between">
                                                 รายการที่เสร็จสิ้นแล้ว
                                                 <span class="p-input-icon-left">
                                             <i class="pi pi-search"></i>
-                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL, $event)"/>
+                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL3, $event)"/>
                                         </span>
                                             </div>
                                         </ng-template>
@@ -128,24 +157,34 @@
                                             <tr>
                                                 <th>รหัสรายการ</th>
                                                 <th>ชื่อรายการ</th>
-                                                <th>คณะ</th>
+                                                <th>เริ่มต้นลงคะแนน</th>
+                                                <th>สิ้นลงคะแนน</th>
+                                                <th>จำนวนผู้ลงสมัคร</th>
                                                 <th style="width: 25vh;text-align: center;">
                                                 </th>
                                             </tr>
                                         </ng-template>
-                                        <ng-template pTemplate="body" let-students>
+                                        <ng-template pTemplate="body" let-electionDetail>
                                             <tr>
-                                                <td>
-                                                    {{students.studentId}}
+                                                <td (click)="goToCompleteElection(electionDetail.elecId)">
+                                                    {{electionDetail.elecId}}
+                                                </td>
+                                                <td (click)="goToCompleteElection(electionDetail.elecId)">
+                                                    {{electionDetail.elecName}}
+                                                </td>
+                                                <td (click)="goToCompleteElection(electionDetail.elecId)">
+                                                    {{electionDetail.elecStartdate | formatDate}}
+                                                </td>
+                                                <td (click)="goToCompleteElection(electionDetail.elecId)">
+                                                    {{electionDetail.elecEnddate | formatDate}}
+                                                </td>
+                                                <td (click)="goToCompleteElection(electionDetail.elecId)">
+                                                    <div class="flex justify-content-center">
+                                                        {{electionDetail.countCandi}}
+                                                    </div>
                                                 </td>
                                                 <td>
-                                                    {{students.name}}
-                                                </td>
-                                                <td>
-                                                    {{students.faculty}}
-                                                </td>
-                                                <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" style="width: 100%;"></button>
+                                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" style="width: 100%;" (click)="goToCompleteElection(electionDetail.elecId)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
